--- a/Project/Base.lproj/Main.storyboard
+++ b/Project/Base.lproj/Main.storyboard
@@ -40,13 +40,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qri-ds-vK4">
-                                <rect key="frame" x="0.0" y="156" width="390" height="100.33333333333331"/>
+                                <rect key="frame" x="0.0" y="156" width="390" height="80"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KxQ-Ss-XZg">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="98.333333333333329"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="141.33333333333334" height="78"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9H-xu-feJ">
-                                        <rect key="frame" x="117.99999999999999" y="39" width="41.333333333333329" height="20.333333333333329"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9H-xu-feJ">
+                                        <rect key="frame" x="159.33333333333334" y="39" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -81,8 +81,7 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="Tsx-UQ-Zmv">
-                        <barButtonItem key="leftBarButtonItem" image="info.circle.fill" catalog="system" id="sQk-d9-aNI"/>
-                        <barButtonItem key="rightBarButtonItem" image="arrow.clockwise" catalog="system" id="Y01-QR-joQ"/>
+                        <barButtonItem key="rightBarButtonItem" image="info.circle.fill" catalog="system" id="sQk-d9-aNI"/>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
@@ -120,7 +119,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
