--- a/Project/Base.lproj/Main.storyboard
+++ b/Project/Base.lproj/Main.storyboard
@@ -33,35 +33,56 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" text="" placeholder="search user" translatesAutoresizingMaskIntoConstraints="NO" id="ZMH-vx-Hd6">
-                                <rect key="frame" x="0.0" y="88" width="390" height="55"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="55" id="Enw-E8-YD6"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="88" width="390" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <view multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qri-ds-vK4">
-                                <rect key="frame" x="0.0" y="156" width="390" height="80"/>
+                                <rect key="frame" x="0.0" y="169" width="390" height="97.333333333333314"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KxQ-Ss-XZg">
-                                        <rect key="frame" x="0.0" y="0.0" width="141.33333333333334" height="78"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="111.66666666666667" height="97.333333333333329"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="111.66666666666667" id="CHr-3e-w8Z"/>
+                                        </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9H-xu-feJ">
-                                        <rect key="frame" x="159.33333333333334" y="39" width="0.0" height="0.0"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="TopLeft" axis="vertical" distribution="equalSpacing" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="fGv-zq-jpl">
+                                        <rect key="frame" x="129" y="8" width="83" height="81.333333333333329"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="253" verticalHuggingPriority="252" horizontalCompressionResistancePriority="753" verticalCompressionResistancePriority="752" text="name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9H-xu-feJ">
+                                                <rect key="frame" x="0.0" y="0.0" width="42.333333333333336" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="repos:0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fna-Qj-kuh">
+                                                <rect key="frame" x="0.0" y="20.333333333333343" width="58" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="followers:0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ow-4i-YIm">
+                                                <rect key="frame" x="0.0" y="40.666666666666657" width="83" height="20.333333333333329"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Aps-1e-dRP">
+                                                <rect key="frame" x="0.0" y="61.000000000000007" width="41.333333333333336" height="20.333333333333336"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <gestureRecognizers/>
                                 <constraints>
-                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="centerY" secondItem="d9H-xu-feJ" secondAttribute="centerY" id="1ZB-qw-x4a"/>
-                                    <constraint firstAttribute="trailing" secondItem="d9H-xu-feJ" secondAttribute="trailing" constant="230.66666666666669" id="I0c-DG-Bc6"/>
-                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="top" secondItem="Qri-ds-vK4" secondAttribute="top" id="Mw1-PN-qFn"/>
-                                    <constraint firstItem="d9H-xu-feJ" firstAttribute="leading" secondItem="KxQ-Ss-XZg" secondAttribute="trailing" constant="18" id="U3O-LV-7AI"/>
-                                    <constraint firstItem="d9H-xu-feJ" firstAttribute="top" secondItem="Qri-ds-vK4" secondAttribute="top" constant="39" id="h0O-1a-Mu5"/>
-                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="leading" secondItem="Qri-ds-vK4" secondAttribute="leading" id="pDg-kF-gSS"/>
-                                    <constraint firstAttribute="bottom" secondItem="d9H-xu-feJ" secondAttribute="bottom" constant="41" id="uWo-5o-5rd"/>
+                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="leading" secondItem="Qri-ds-vK4" secondAttribute="leading" id="Rig-Az-IGU"/>
+                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="centerY" secondItem="fGv-zq-jpl" secondAttribute="centerY" id="ZmY-QK-Ggt"/>
+                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="top" secondItem="Qri-ds-vK4" secondAttribute="top" id="mpD-Lt-kDh"/>
+                                    <constraint firstItem="fGv-zq-jpl" firstAttribute="leading" secondItem="KxQ-Ss-XZg" secondAttribute="trailing" constant="17.333333333333329" id="ukX-0M-bXM"/>
+                                    <constraint firstItem="KxQ-Ss-XZg" firstAttribute="centerY" secondItem="Qri-ds-vK4" secondAttribute="centerY" id="yio-09-6Iz"/>
                                 </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="WzN-i1-Vwf" appends="YES" id="gto-gN-c6q"/>
@@ -71,12 +92,13 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Qri-ds-vK4" firstAttribute="leading" secondItem="ZMH-vx-Hd6" secondAttribute="leading" id="C73-nW-cAw"/>
-                            <constraint firstItem="ZMH-vx-Hd6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Ikd-0s-nuQ"/>
-                            <constraint firstItem="ZMH-vx-Hd6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WBs-Zz-Dee"/>
-                            <constraint firstItem="Qri-ds-vK4" firstAttribute="trailing" secondItem="ZMH-vx-Hd6" secondAttribute="trailing" id="bvd-cd-zBs"/>
-                            <constraint firstAttribute="trailing" secondItem="ZMH-vx-Hd6" secondAttribute="trailing" id="kRh-gr-fp9"/>
-                            <constraint firstItem="Qri-ds-vK4" firstAttribute="top" secondItem="ZMH-vx-Hd6" secondAttribute="bottom" constant="13" id="mRP-GB-3OM"/>
+                            <constraint firstItem="ZMH-vx-Hd6" firstAttribute="leading" secondItem="Qri-ds-vK4" secondAttribute="leading" id="2VN-Wh-5Ii"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Qri-ds-vK4" secondAttribute="bottom" constant="494.66666666666663" id="AMG-AZ-7o8"/>
+                            <constraint firstItem="ZMH-vx-Hd6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KRn-Jq-f5t"/>
+                            <constraint firstAttribute="trailing" secondItem="ZMH-vx-Hd6" secondAttribute="trailing" id="k3Q-UM-oiD"/>
+                            <constraint firstItem="ZMH-vx-Hd6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nBm-cV-tYE"/>
+                            <constraint firstItem="ZMH-vx-Hd6" firstAttribute="trailing" secondItem="Qri-ds-vK4" secondAttribute="trailing" id="qSr-nC-Dxm"/>
+                            <constraint firstItem="Qri-ds-vK4" firstAttribute="top" secondItem="ZMH-vx-Hd6" secondAttribute="bottom" constant="25" id="whT-Kh-7S4"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -91,10 +113,13 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="searchBar" destination="ZMH-vx-Hd6" id="8kM-ci-U2f"/>
+                        <outlet property="userBio" destination="Aps-1e-dRP" id="KFK-rF-ujq"/>
+                        <outlet property="userFollowers" destination="0Ow-4i-YIm" id="bDP-Du-4Io"/>
                         <outlet property="userImage" destination="KxQ-Ss-XZg" id="xbc-VO-sb8"/>
                         <outlet property="userName" destination="d9H-xu-feJ" id="F0m-Gr-fMC"/>
+                        <outlet property="userRepos" destination="fna-Qj-kuh" id="SSj-LA-lHu"/>
                         <outlet property="userView" destination="Qri-ds-vK4" id="DSG-3W-FMU"/>
-                        <segue destination="AxO-aS-q2y" kind="show" identifier="UserDetail" id="WAL-mC-Fqz"/>
+                        <segue destination="Bn5-3S-fAM" kind="show" identifier="reposList" id="jvp-si-D3y"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -104,23 +129,70 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="100" y="71"/>
+            <point key="canvasLocation" x="100" y="59.715639810426538"/>
         </scene>
-        <!--User Detail View Conroller-->
-        <scene sceneID="93a-UN-4oj">
+        <!--Repos View Controller-->
+        <scene sceneID="44F-03-CQ3">
             <objects>
-                <viewController id="AxO-aS-q2y" customClass="UserDetailViewConroller" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="pKA-24-VWn">
+                <tableViewController id="Bn5-3S-fAM" customClass="ReposViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="O6y-it-wsG">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="zDH-YK-BwJ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="repoCell" id="Yk7-7v-gXy">
+                                <rect key="frame" x="0.0" y="28" width="390" height="43.666667938232422"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yk7-7v-gXy" id="Kim-Y9-crE">
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bf-go-pCi">
+                                            <rect key="frame" x="28" y="10" width="59" height="22"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Bn5-3S-fAM" id="Dd5-Au-9qK"/>
+                            <outlet property="delegate" destination="Bn5-3S-fAM" id="utC-9F-LcM"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="HUD-GI-0NR">
+                        <barButtonItem key="rightBarButtonItem" image="arrow.clockwise" catalog="system" id="MpH-66-Lag">
+                            <connections>
+                                <action selector="reload:" destination="Bn5-3S-fAM" id="xqD-pW-c7g"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="OF5-68-R9p" kind="show" identifier="repoDetails" id="5Vt-VO-qPW"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WjI-do-TeM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="947.69230769230762" y="59.715639810426538"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="deI-MG-jc0">
+            <objects>
+                <viewController id="OF5-68-R9p" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hQ2-ZE-E5a">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="gCK-Ds-agS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="miG-2y-reQ"/>
+                    <navigationItem key="navigationItem" id="ehD-aI-RbB"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pfd-91-zzy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mw9-ZD-Bhy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1022" y="60"/>
+            <point key="canvasLocation" x="1731" y="60"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="4Gz-q0-Z81">
@@ -139,6 +211,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="info.circle.fill" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
